# azure-ctest

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake
jenkins/: linux_c_gcc44.sh  osx_c.sh  ubuntu_clang.sh  windows_c.cmd  windows_vs2008_c.cmd
tests/ctest_ut/: CMakeLists.txt
